--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,13 @@
 
 /* Note: an asteroid image is included in this repo. 
 Feel free to use it if you like. */
+/*
+*/
+.gameBoard {
+  position: absolute;
+    right: 0px;
+}
 
+.classed {
+  z-index: 10;
+}
