--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,10 @@ Feel free to use it if you like. */
 }
 
 .enemy {
-    -webkit-animation-name: spin;
+
+    -webkit-animation: spin 2s; /* Chrome, Safari, Opera */
+    animation: spin 2s;
+/*    -webkit-animation-name: spin;
     -webkit-animation-duration: 500;
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-timing-function: linear;
@@ -30,8 +33,22 @@ Feel free to use it if you like. */
     animation-duration: 500ms;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+}*/
+
+@-webkit-keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
 }
-@-ms-keyframes spin {
+
+/* Standard syntax */
+@keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
+}
+
+
+
+/*@-ms-keyframes spin {
     from { -ms-transform: rotate(0deg); }
     to { -ms-transform: rotate(360deg); }
 }
@@ -50,4 +67,5 @@ Feel free to use it if you like. */
     to {
         transform:rotate(360deg);
     }
+}*/
 }
